[project]
name = "ai-agent-sales-development-representative"
version = "0.1.0"
description = "AI agebt Sales Development Representative (SDR)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "gradio>=4.0.0",
    "openai>=2.15.0,<3.0.0",
    "httpx>=0.24,<0.27",
   "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]






